# Shieldgram

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
examples/: attack_simulator.py  protected_bot.py  simple_bot.py
src/botshield/: __init__.py  config.py  types.py
src/botshield/detectors/: base.py  flood_detector.py  rate_limiter.py
src/botshield/engine/: decision.py
src/botshield/middleware/: __init__.py  shield.py
src/botshield/storage/: __init__.py  base.py  redis.py
src/shieldgram/: __init__.py  config.py
src/shieldgram/core/: __init__.py  scoring.py
src/shieldgram/detectors/: __init__.py  flood_detector.py  spam_detector.py
src/shieldgram/engine/: __init__.py  decision.py  detection.py
src/shieldgram/middleware/: __init__.py  shield.py
src/shieldgram/reputation/: __init__.py  engine.py
src/shieldgram/storage/: __init__.py  postgres.py  redis.py
tests/: conftest.py  test_config.py  test_engine.py  test_flood_detector.py  test_rate_limiter.py  test_reputation.py  test_spam_detector.py
