[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shieldgram"
version = "0.2.0"
description = "Anti-abuse security middleware for Telegram bots"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    {name = "Shieldgram Team"},
]
keywords = [
    "telegram",
    "telegram-bot",
    "aiogram",
    "security",
    "anti-spam",
    "anti-abuse",
    "rate-limiting",
    "middleware",
    "cybersecurity",
    "opensource",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "aiogram>=3.7,<4.0",
    "redis[hiredis]>=5.0,<6.0",
    "pydantic>=2.0,<3.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.5",
    "fakeredis[lua]>=2.24",
]
dashboard = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
]
all = [
    "shieldgram[dev,dashboard]",
]

[project.urls]
Homepage = "https://github.com/fvckxd55/Shieldgram"
Repository = "https://github.com/fvckxd55/Shieldgram"
"Bug Tracker" = "https://github.com/fvckxd55/Shieldgram/issues"
Changelog = "https://github.com/fvckxd55/Shieldgram/blob/master/CHANGELOG.md"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["B027", "RUF002"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy",
    "sqlalchemy.ext.*",
    "sqlalchemy.orm",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
